--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -60,6 +60,11 @@ sites:
     expectedStatusCodes:
       - 200
     maxResponseTime: 5000  
+  - name: SERV00
+    url: $SERV00
+    expectedStatusCodes:
+      - 200
+    maxResponseTime: 5000
   - name: EMBY KEEPER
     url: $EMBYKEEPER
     headers:
